fixed scrollbar intersects playcontrols

--- a/src/app/editor/editor.module.css
+++ b/src/app/editor/editor.module.css
@@ -7,7 +7,7 @@
 }
 
 .editor_centering_container {
-    height: calc(100vh - var(--header-height) - var(--playcontrols-height));
+    height: calc(100vh - var(--header-height) - 2*var(--playcontrols-height));
     overflow-x: scroll;
 }
 
