--- a/src/app/playcontrolsarea/playcontrolsarea.module.css
+++ b/src/app/playcontrolsarea/playcontrolsarea.module.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding-top: var(--playcontrols-height);
     height: var(--playcontrols-height);
     width: 100% - var(--editor-left-margin);
 }
